--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="./sass/stylesheet.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js"></script>
+    <script type="text/javascript" src="./js/templates/handlebars.js"></script>
+    <script type="text/javascript" src="./js/templates/templates.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
     <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' rel='stylesheet prefetch'>
 </head>
